[gd_scene load_steps=4 format=3 uid="uid://q44q7cgdcsp5"]

[ext_resource type="Script" path="res://Car/CarObject.gd" id="1_58tfc"]
[ext_resource type="Texture2D" uid="uid://dkckdr7jdwlk2" path="res://Car/car_red.png" id="2_pf4rd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1gbf"]
size = Vector2(16, 28)

[node name="CarObject" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_58tfc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_l1gbf")

[node name="Car" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_pf4rd")

[node name="Sensors" type="Node2D" parent="."]
position = Vector2(0, -22)

[node name="ForwardRayCast" type="RayCast2D" parent="Sensors"]
target_position = Vector2(0, -50)
collision_mask = 2

[node name="LeftRayCast" type="RayCast2D" parent="Sensors"]
rotation = -1.0472
target_position = Vector2(0, -50)
collision_mask = 2

[node name="RightRayCast" type="RayCast2D" parent="Sensors"]
rotation = 1.0472
target_position = Vector2(0, -50)
collision_mask = 2
